version/0.20/_sources/api/solver/_autosummary/settings/repair_improve.rst.txt
:orphan:

.. _repair_improve:

repair_improve
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.repair_improve.repair_improve
    :show-inheritance:

.. rubric:: Attributes

==================================================================================================   ====================================================================

Attribute                                                                                                                                                         Summary

==================================================================================================   ====================================================================
:ref:`allow_repair_at_boundaries <allow_repair_at_boundaries>`                                            Enable/disable adjustment of boundary nodes during mesh repair.

:ref:`include_local_polyhedra_conversion_in_repair <include_local_polyhedra_conversion_in_repair>`       Enable/disable local conversion to polyhedra during mesh repair.

==================================================================================================   ====================================================================

.. rubric:: Methods

======================================================   ================================================================================

Method                                                                                                                            Summary

======================================================   ================================================================================
:ref:`repair_poor_elements <repair_poor_elements>`                                              Report invalid and poor quality elements.

:ref:`improve_quality <improve_quality>`                                                               Tries to improve the mesh quality.

:ref:`repair <repair>`                                                            Tries to repair mesh problems identified by mesh check.

:ref:`repair_face_handedness <repair_face_handedness>`                          Correct face handedness at left handed faces if possible.

:ref:`repair_face_node_order <repair_face_node_order>`                                             Reverse order of face nodes if needed.

:ref:`repair_wall_distance <repair_wall_distance>`           Correct wall distance at very high aspect ratio hexahedral/polyhedral cells.

:ref:`repair_periodic <repair_periodic_1>`                                      Modify mesh to enforce specified periodic rotation angle.

======================================================   ================================================================================

.. rubric:: Included in:

==================   =================

Parent                         Summary

==================   =================
:ref:`mesh <mesh>`       'mesh' child.

==================   =================

